--- a/FirstTest/AndroidManifest.xml
+++ b/FirstTest/AndroidManifest.xml
@@ -22,6 +22,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.my.firsttest.ShowMessageActivity"
+            android:label="@string/title_activity_show_message"
+            android:parentActivityName="com.my.firsttest.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.my.firsttest.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
